# pretrend_ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.api.dockerignore  Dockerfile.dev  Dockerfile.dev.dockerignore  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  reproduce.py  requirements.txt  requirements_ci.txt
.agent/: CHANGE_GATES.md  INVARIANTS.md  PARENTS_TASK_TEMPLATE.md  README.md  STABLE_CONTEXT.md  TASK_QUEUE.md  TASK_TEMPLATE.md  WORKFLOW.md
.agent/task/: P30-0_formalize_runtime_contract.md  P30-1_runtime_volume_contract.md  P30-2_docker_build_test_runtime.md  P30-3_data_bootstrap_db_restore_contract.md  P30-4_reproducibility_verification.md  P30-5_agent_docs_publication_safety.md  P30-6_docs_marker_classification.md  P30_parent_reproducible_runtime.md
.github/workflows/: ci.yaml
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
dags/: __init__.py  broker_mock_trading_dag.py  eod_pipeline_dag.py  explainability_build_dag.py  gold_postgres_sync_dag.py  macro_pipeline_dag.py  paper_trading_dag.py  similarity_build_dag.py  strategy_engine_dag.py  text_pipeline_dag.py
docker/: Dockerfile.airflow  Dockerfile.airflow.dockerignore  Dockerfile.api  Dockerfile.dev  Dockerfile.dev.dockerignore  Dockerfile.web  Dockerfile.web.dockerignore  nginx.conf
docs/: README.md  agent_adoption_notes.md  architecture.md  changelog.md  data_ingest_datasources.md  data_requirements.md  environment.md  market_structure_data_inventory.md  milestones.md  operation_guide.md  project_summary.md  strategy_architecture.md  strategy_engine_design.md  system_overview.md  universe_design.md
docs/adr/: ADR-001-medallion-data-architecture.md  ADR-002-rule-based-signal-engine.md  ADR-003-three-layer-market-structure.md  ADR-004-etf-based-execution-universe.md  ADR-005-llm-interpretation-layer.md  ADR-006-execution-tier-hierarchy.md  README.md
docs/api/: observability_api_contract.md
docs/architecture/: allocation_engine_contract.md  api_design.md  axis_horizon_dependency_contract.md  boundary_contract.md  calendar_design_contract.md  calendar_pipeline_v1.md  gold_layer.md  (+31 more)
migrations/: env.py
requirements/: airflow.txt  api.txt  ci.txt
tests/: test_config.py  test_models_base.py  test_smoke.py
(+434 files in other folders)
