[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretrend-ai"
version = "0.1.0"
description = "Pre-Trend Value based stock trading AI system"
readme = "README.md"
requires-python = ">=3.10"

# 의존성은 일단 최소만, 나머지는 requirements.txt로 계속 관리
dependencies = [
    "pandas",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]