[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretrend-ai"
version = "0.1.0"
description = "Contract-first, reproducible time-series data pipeline for AI-ready and strategy-ready snapshots"
readme = "README.md"
requires-python = ">=3.10"

# 의존성은 일단 최소만, 나머지는 requirements.txt로 계속 관리
dependencies = [
    "alembic>=1.13",
    "pandas",
    "numpy",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv", ".git", "archive"]
