[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretrend-ai"
version = "0.1.0"
description = "Contract-first, reproducible time-series data pipeline for AI-ready and strategy-ready snapshots"
readme = "README.md"
requires-python = ">=3.10"

# package install 최소 의존성만 둔다. 역할별 runtime 의존성은 requirements/ 아래에서 관리한다.
dependencies = [
    "alembic>=1.13",
    "pandas",
    "numpy",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
norecursedirs = [".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv", ".git", "archive"]
markers = [
    "contract: API/schema/boundary contract tests",
    "invariant: operational invariant tests",
    "db: tests requiring Postgres/TimescaleDB",
    "dag: Airflow DAG/scheduling tests",
    "slow: slow integration tests",
    "personal: frozen Personal Track tests",
]
